@@ -1,4 +1,8 @@
-﻿drkns 22.09.2014 19:21:31 +0200 - build 4118
+﻿drkns 22.09.2014 19:59:11 +0200 - build 4119
+
+1. С форума: Отвалилось добавление файла из панели в командную строку при открытом автодополнении в командной строке.
+
+drkns 22.09.2014 19:21:31 +0200 - build 4118
 
 1. #0002804: PN_CHECKMASK не распознает неправильные регексы в 3.0.4117
 
